--- a/css/style.css
+++ b/css/style.css
@@ -25,37 +25,37 @@ img {
 .main-nav {
     display: flex;
     font-size: 1.25rem;
-    text-transform: uppercase; /*リスト大文字指定*/
+    text-transform: uppercase;
     margin-top: 34px;
     list-style: none;
 }
 .main-nav li {
-    margin-left: 36px; /*リスト左に空欄*/
+    margin-left: 36px;
 }
 .main-nav a {
-    color: #432; /*リストカラー*/
+    color: #432;
 }
 .main-nav a:hover {
-    color: #8bd; /*リストホバーカラー*/
+    color: #8bd;
 }
 
 .page-header {
     display: flex;
-    justify-content: space-between; /*均等表示左右*/
+    justify-content: space-between;
 }
 .wrapper {
-    max-width: 1100px; /*大画面用最大値*/
-    margin: 0 auto; /*左右中央表示*/
-    padding: 0 4%; /*スマホ向け外余白*/
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0 4%;
 
 }
 
 /* home */
-.home-content { /*We'll Make Your Day～メニューを見る*/
+.home-content {
     text-align: center;
     margin-top: 10%;
 }
-.home-content p { /*おしゃれなカフェで瓷やされてみませんか?無添加の食材で体の中からリフレッシュ。*/
+.home-content p {
     font-size: 1.125rem;
     margin: 10px 0 42px 0;
 }
@@ -73,7 +73,7 @@ img {
     font-size: 1.375rem;
     background: #0bd;
     color: #fff;
-    border-radius: 5px; /*ボタン角丸*/
+    border-radius: 5px;
     padding: 18px 32px;
 }
 .button:hover {
